--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FERMA</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section class="section container">
         <div class="text">
             <h1 class="text__title">
-                Lorem - 
+                <span class="text__first-line">Lorem - </span>
                 ipsum dolor sit amet, consectetuer adipiscing elit.
             </h1>
 
@@ -39,7 +46,7 @@
             </p>           
         </div>
     </section>    
-        <faater class="footer">
+        <footer class="footer container">
             <div class="copyright">
                 Etiam ultricies nisi vel augue
             </div>
@@ -68,7 +75,7 @@
                     </li>
                 </ul>
             </div>
-        </faater>
+        </footer>
 
     
 </body>
