feat: add index.html, styles.css

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-    <section class="section container">
+<body class="body">
+    <section class="section container hero">
         <div class="text">
             <h1 class="text__title">
                 <span class="text__first-line">Lorem - </span>
@@ -37,46 +38,47 @@
                 </li>
             </ul>
 
-            <a href="#" class="link">
-                <img src="./assets/images/apple.svg" alt="logo Apple">
+            <a href="#" class="text__link">
+                <img src="./assets/images/apple.svg" alt="Выберите ваш знак зодиака">
             </a>
 
             <p class="text__descr">
                 Quisque rutrum
             </p>           
         </div>
-    </section>    
-        <footer class="footer container">
-            <div class="copyright">
-                Etiam ultricies nisi vel augue
-            </div>
 
-            <div class="social">
-                <ul class="social__list">
-                    <li class="social__item">
-                        <a class="social__link instagram" href="#">
+        <!-- <img src="./assets/images/phone.png" alt="Всё возможно - всё в твоих руках"> -->
+    </section>   
 
-                        </a>
-                    </li>
-                    <li class="social__item">
-                        <a class="social__link vk" href="#">
+    <footer class="footer container">
+        <div class="copyright">
+            Etiam ultricies nisi vel augue
+        </div>
 
-                        </a>
-                    </li>
-                    <li class="social__item">
-                        <a class="social__link ok" href="#">
+        <div class="social">
+            <ul class="social__list">
+                <li class="social__item">
+                    <a class="social__link instagram" href="#">
 
-                        </a>
-                    </li>
-                    <li class="social__item">
-                        <a class="social__link fb" href="#">
+                    </a>
+                </li>
+                <li class="social__item">
+                    <a class="social__link vk" href="#">
 
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </footer>
+                    </a>
+                </li>
+                <li class="social__item">
+                    <a class="social__link ok" href="#">
 
-    
+                    </a>
+                </li>
+                <li class="social__item">
+                    <a class="social__link fb" href="#">
+
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </footer>    
 </body>
 </html>
