update: animation adaptive

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,60 +17,64 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/animation.css">
 </head>
+
 <body class="body">
-    <div class="animation-planet container">
-        <div class="planet"></div>
-        <div class="planet"></div>
-        <div class="planet"></div>
-        <div class="saturn"></div>
-    </div>
-
     <section class="section container hero">
-        <div class="text">
-            <h1 class="text__title">
-                <span class="text__first-line">Lorem - </span>
-                ipsum dolor sit amet, consectetuer adipiscing elit.
-            </h1>
-
-            <ul class="text__list">
-                <li class="text__item">
-                    Aenean commodo ligula eget dolor
-                </li>
-                <li class="text__item">
-                    Aenean massa.
-                </li>
-                <li class="text__item">
-                    Donec pede justo, fringilla vel, aliquet 
-                </li>
-                <li class="text__item">
-                    In enim justo, rhoncus ut, imperdiet Integer tincidunt.
-                </li>
-            </ul>
-
-            <a href="#" class="text__link">
-                <img src="./assets/images/apple.svg" alt="Загрузить через Аппстор">
-            </a>
-
-            <p class="text__descr">
-                Quisque rutrum
-            </p>           
+        <div class="animation-planet">
+            <div class="planet"></div>
+            <div class="planet"></div>
+            <div class="planet"></div>
+            <div class="saturn"></div>
         </div>
 
-        <div class="hero__img-wrap">
-            <img class="hero__img" src="./assets/images/phone.png" alt="Выберите ваш знак зодиака">
-            <div class="animation-phone anim-1">
-                <div class="animation-phone__big-ball"></div>
-                <div class="animation-phone__big-ball"></div>
-                <div class="animation-phone__big-ball"></div>
+        <div class="flex-wrap">
+            <div class="text">
+                <h1 class="text__title">
+                    <span class="text__first-line">Lorem - </span>
+                    ipsum dolor sit amet, consectetuer adipiscing elit.
+                </h1>
+
+                <ul class="text__list">
+                    <li class="text__item">
+                        Aenean commodo ligula eget dolor
+                    </li>
+                    <li class="text__item">
+                        Aenean massa.
+                    </li>
+                    <li class="text__item">
+                        Donec pede justo, fringilla vel, aliquet
+                    </li>
+                    <li class="text__item">
+                        In enim justo, rhoncus ut, imperdiet Integer tincidunt.
+                    </li>
+                </ul>
+
+                <a href="#" class="text__link">
+                    <img src="./assets/images/apple.svg" alt="Загрузить через Аппстор">
+                </a>
+
+                <p class="text__descr">
+                    Quisque rutrum
+                </p>
             </div>
-            <div class="animation-phone anim-2">
-                <div class="animation-phone__small-ball"></div>
-                <div class="animation-phone__small-ball"></div>
-                <div class="animation-phone__small-ball"></div>
+
+            <div class="hero__img-wrap">
+                <img class="hero__img" src="./assets/images/phone.png" alt="Выберите ваш знак зодиака">
+                <div class="animation-phone anim-1">
+                    <div class="animation-phone__big-ball"></div>
+                    <div class="animation-phone__big-ball"></div>
+                    <div class="animation-phone__big-ball"></div>
+                </div>
+                <div class="animation-phone anim-2">
+                    <div class="animation-phone__small-ball"></div>
+                    <div class="animation-phone__small-ball"></div>
+                    <div class="animation-phone__small-ball"></div>
+                </div>
             </div>
         </div>
-        
-    </section>   
+
+
+    </section>
 
     <footer class="footer container">
         <div class="copyright">
@@ -100,8 +105,9 @@
                 </li>
             </ul>
         </div>
-    </footer>    
+    </footer>
 
 
 </body>
+
 </html>
